# plurity-mcp

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/plurity_mcp/: __init__.py  client.py  config.py  server.py  setup.py
src/plurity_mcp/tools/: audit.py  intelligence.py  toll.py
