[project]
name = "plurity-mcp"
version = "0.1.0"
description = "Unified MCP server for all Plurity services (Audit, Toll, Intelligence)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.27.0",
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://plurity.ai"
Repository = "https://github.com/plurity-ai/plurity-mcp"
"Bug Tracker" = "https://github.com/plurity-ai/plurity-mcp/issues"

[project.scripts]
plurity-mcp = "plurity_mcp.server:main"
plurity-mcp-setup = "plurity_mcp.setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plurity_mcp"]
